    - Don't crash when run with no parameters (once again). Thanks to
      Didier Raboud. (Closes: #547952)
  * Cupt:
    - Cache:
      - 'get_satisfying_versions': don't sort result.
      - 'get_sorted_pinned_versions': removed ability to memoize it.
      - BinaryVersion:
        - Rewritten parsing the version entry using different approach.
          Speeded up parsing significantly.
      - SourceVersion:
        - Rewritten parsing the version entry using different approach.
        - Support 'Binary' field span to multiple lines.
        - Support native packages with dashed version strings with a warning.
        - Recognize ".debian.tar.<ext>" files as diffs.
        - New field 'others'.
        - [API break] 'uploaders': became reference to array instead of string.
    - System:
      - Resolvers/Native:
        - Don't pre-schedule any relations for newly-installed versions, leave
          all work to main resolver.
        - Don't try to remove the same unsynchronizeable package multiple
          times.
        - Fixed 'full' flavor of the resolver in non-debug mode.
        - Fixed too high factor for deleting unsynchronizeable packages.
        - Implemented shallow copying for solutions. Significantly reduces
          the average RAM footprint for a solution.
        - Don't try to remove the unsynchronizeable package if the stick is
          set.
        - Adjusted calculating action weights so installing an extra package
          gains almost nothing.
        - When 'cupt::resolver::synchronize-source-versions' is set, try use
          source versions if available to speed-up processing.
        - Don't perform re-synchronization if the source version has several
          appropriate binary versions.
        - Adjusted the effect of the 'cupt::resolver::quality-bar' option so
          it affects the less the longer solution is.
      - Worker:
        - Don't use File::Path module. Thanks to Bernd Zeimetz.
          (Closes: #553629)